画像アップロード成功

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 TwitterTutorial.xcodeproj/project.xcworkspace/xcuserdata/watanabedaichi.xcuserdatad/UserInterfaceState.xcuserstate
+GoogleService-Info.plist
